--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -17,11 +17,11 @@
     {#insert moreScripts /}
   </head>
   <body>
-    <div class="head">
+    <!-- <div class="head"> -->
       <!-- You can make links to actions using the uri: namespace -->
-      <div><a href="{uri:Todos.index}">Index</a></div>
-      <div><a href="{uri:Todos.todos}">Todos</a></div>
-    </div>
+      <!-- <div><a href="{uri:Todos.index}">Index</a></div>
+      <div><a href="{uri:Todos.todos}">Todos</a></div> -->
+    <!-- </div> -->
     <!-- This inserts the body of your templates -->
     {#insert /}
   </body>
